ISSUE-19 regression bug - fix - copy does not allow null values - this is good too